--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.0",
+    "@angular/animations": "^8.2.14",
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
-    "@angular/forms": "~8.2.0",
+    "@angular/fire": "^5.4.2",
+    "@angular/forms": "^8.2.14",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "@ng-bootstrap/ng-bootstrap": "^5.2.1",
+    "bootstrap": "^4.4.1",
+    "firebase": "^7.8.1",
+    "font-awesome": "^4.7.0",
     "ng-http-loader": "^6.0.0",
-    "rxjs": "^6.5.4",
+    "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
