--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "@ng-bootstrap/ng-bootstrap": "^5.2.1",
+    "@types/googlemaps": "^3.39.2",
     "bootstrap": "^4.4.1",
     "firebase": "^7.8.1",
     "font-awesome": "^4.7.0",
