--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.2.1",
     "@types/googlemaps": "^3.39.2",
     "bootstrap": "^4.4.1",
+    "date-fns": "^2.9.0",
     "firebase": "^7.8.1",
     "font-awesome": "^4.7.0",
     "ng-http-loader": "^6.0.0",
